--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,4 @@
 {deps_dir, ["deps"]}.
 {sub_dirs, []}.
 {erl_opts, [debug_info, warnings_as_errors]}.
-{deps, [
-    {etoml, ".*", {git, "https://github.com/kalta/etoml.git", {branch, "master"}}}
-]}.
+{deps, []}.
