--- a/priv/test.toml
+++ b/priv/test.toml
@@ -2,23 +2,23 @@ version = "2.7.13"
 
 [database]
     server = "1.2.3.4"
-    port = 5427852
+    port = 1234
     pool_size = 100
     max_overflow = 200
 
 [binding]
-    [proto1]
-        ports = [770014, 7715, 7716]
+    [binding.proto1]
+        ports = [7713, 7714, 7715]
         conn_timeout = 500
-    [proto2]
+    [binding.proto2]
         ports = [8713, 8714, 8715]
         conn_timeout = 450
 
 [worker]
     [worker.proto1]
-        pool_size = 400
-        max_overflow = 100
-        transaction_loglevel = 11
+        pool_size = 300
+        max_overflow = 200
+        transaction_loglevel = 2
     [worker.proto2]
         pool_size = 400
         max_overflow = 200
